# padangos-scraper

./: .gitignore  README.md  config_url_builder.py  constants.py  main.py  main_bot.py  pyproject.toml  requirements.txt
.github/workflows/: actions_demo.yml  github-actions-demo.yml  padangos_scraper.yml
core/: config_123.py
core_123/: config_123.py  scrape_info.py  url_builder_123.py
crawlers/: scrap_tires_123.py
data/: data_123.json
models/: scrap_info_model.py  tires_123_model.py
supabase_db/: connect_database.py
telegram_notif/: handlers.py  keyboards.py  main_bot.py
utils/: file.py  http_get_soup.py  pagination.py  url_builder.py  url_builder_123.py
