[project]
name = "padangos-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "python-telegram-bot>=22.7",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "supabase>=2.28.3",
]
